--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
                             <p>Yêu chẳng dám yêu, mà cứ ngỡ là yêu</p>
                             <br>
                             <p>Đã từng dặn lòng là đừng yêu một ai đó quá nhiều</p>
-                            <p>Áy mà ngô nghê biết bao nhiêu là đủ</p>
+                            <p>Ấy mà ngô nghê biết bao nhiêu là đủ</p>
                             <p>Bao nhiêu nữa thì mới về lại quán cũ</p>
                             <p>Trong một chiều mưa bay, ly capuchino ấm hơn bao giờ</p>
                             <br>
-                            <p>Anh chưa một lần muốn quan tâm, ấy mà em chẳng ngại chò</p>
+                            <p>Anh chưa một lần muốn quan tâm, ấy mà em chẳng ngại chờ</p>
                             <p>Hóa ra lúc tương tư, em dại khờ hơn ai hết</p>
                             <p>Bởi trót yêu là chết ở trong lòng một ít</p>
                             <p>Phần còn sống chẳng cũng tổn thương đến kiệt cùng</p>
@@ -144,7 +144,7 @@
                             <p>Giá như: anh hiểu tận sâu trong những câu nói của em là gì</p>
                             <p>Giá như: chuyện mình vị chi vừa đủ</p>
                             <p>Trăm cái giá như, liệu có hóa thành nỗi niềm em ấp ủ</p>
-                            <p>Có giúp ta quay lại, những, kỷ niệm cũ đã từng?</p>
+                            <p>Có giúp ta quay lại: những kỷ niệm cũ đã từng?</p>
                             <br>
                             <p>Hóa ra: sau tất cả, mình vẫn là người dưng</p>
                             <p>Hóa ra: bấy lâu nay là lòng em cố chấp</p>
@@ -267,7 +267,7 @@
                             <p>Và có thể, sau hợp tan đổ vỡ</p>
                             <p>Môi đã khô, mi hoen biết bao mùa</p>
                             <p>Ai liệu còn, vương vẫn chuyện lúc xưa</p>
-                            <p>Hay bờ vai cũ năm nào, giờ khoác vừa áo mới</p>
+                            <p>Hay bờ vai cũ năm nào, giờ khoác vừa áo mới?</p>
                         </div>
                     </div>
                     <div class="ps">
